--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
   },
   "homepage": "https://github.com/Frenzy265/boilerplate#readme",
   "dependencies": {
-    "express": "4.17.1",
-    "react-router-dom": "^5.2.0"
+    "express": "4.17.1"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
