➕ Import json-server

--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^12.2.2",
     "eslint": "^7.14.0",
     "eslint-plugin-react": "^7.21.5",
+    "json-server": "^0.16.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
