--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "api": "json-server --watch db.json --port 5000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test:watch": "react-scripts test",
