--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "homepage": "https://github.com/Frenzy265/boilerplate#readme",
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "mongodb": "^3.6.3"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
