--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/Frenzy265/boilerplate#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
     "mongodb": "^3.6.3"
   },
