--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -8,13 +8,13 @@
       "type": "image/x-icon"
     },
     {
-      "src": "android-192.png",
+      "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "apple-152.png",
+      "src": "logo152.png",
       "type": "image/png",
       "sizes": "152x152",
       "purpose": "any maskable"
