--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "homepage": "https://github.com/Frenzy265/boilerplate#readme",
   "dependencies": {
+    "@babel/core": "^7.12.10",
+    "babel-jest": "^26.6.3",
     "dotenv": "^8.2.0",
     "express": "4.17.1",
     "mongodb": "^3.6.3"
