--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test:watch": "react-scripts test",
-    "test": "react-scripts test --watchAll=false",
+    "test": "react-scripts test --watchAll=false --transformIgnorePatterns \"node_modules/(?!localbase)/\"",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 3002 -s public",
     "build-storybook": "build-storybook -s public"
