--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "eslint": "^7.14.0",
     "eslint-plugin-react": "^7.21.5",
     "json-server": "^0.16.3",
+    "localbase": "^0.7.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^3.6.0",
